@@ -1,3 +1,3 @@
-# mean, investigation_time=1.0, imt="PGA", checksum=3616291359
+# mean, investigation_time=1.0, imt="PGA", checksum=1898199469
 lon,lat,depth,poe-0.1,poe-0.4,poe-0.6
 0.00000,0.00000,0.00000,5.420521E-01,1.901685E-02,1.999800E-04
