@@ -29,7 +29,7 @@ truncation_level = 3
 maximum_distance = 200
 minimum_intensity = {"SA(0.3)": 0.10}
 investigation_time = 10
-split_sources = false
+fast_sampling = true
 
 [hazard_outputs]
 ground_motion_fields = true
