@@ -38,7 +38,7 @@ intensity_measure_types_and_levels = {"PGA": [0.1, 0.4, 0.6, 1.0]}
 truncation_level = 0.0
 # km
 maximum_distance = 200.0
-split_sources = false
+fast_sampling = true
 
 [event_based_params]
 
