@@ -1,4 +1,4 @@
-# mean, investigation_time=50.0, imt="PGA", checksum=34020974
+# mean, investigation_time=50.0, imt="PGA", checksum=1461788156
 lon,lat,depth,poe-0.005,poe-0.007,poe-0.0098,poe-0.0137,poe-0.0192,poe-0.0269,poe-0.0376,poe-0.0527,poe-0.0738,poe-0.103,poe-0.145,poe-0.203,poe-0.284,poe-0.397,poe-0.556,poe-0.778,poe-1.09,poe-1.52,poe-2.13
 0.00000,0.00000,0.00000,9.079355E-01,8.507507E-01,7.738913E-01,6.760835E-01,5.804790E-01,4.832903E-01,3.865819E-01,2.875429E-01,1.989547E-01,1.442109E-01,9.801562E-02,5.356026E-02,3.192330E-02,2.614935E-02,8.611050E-03,7.407026E-03,6.172522E-03,1.234504E-03,0.000000E+00
 0.00000,1.00000,0.00000,8.828227E-01,8.351400E-01,7.650872E-01,6.801164E-01,6.037825E-01,5.101746E-01,4.135874E-01,3.116435E-01,2.140596E-01,1.057413E-01,5.675881E-02,3.469190E-02,2.643656E-02,1.156090E-02,3.086261E-03,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
