@@ -38,7 +38,7 @@ intensity_measure_types = PGA
 truncation_level = 
 # km
 maximum_distance = 200.0
-split_sources = false
+fast_sampling = true
 
 [event_based_params]
 
