@@ -1,7 +1,7 @@
 [general]
 description = event based risk
 calculation_mode = event_based_risk
-split_sources = false
+fast_sampling = true
 
 [exposure]
 exposure_file = exposure_model.xml
